# agda-unused

./: .gitignore  CHANGELOG.md  LICENSE  README.md  agda-unused.cabal  default.nix  flake.fish  flake.nix  shell.nix
agda-roots/: Main.hs
agda-unused/: Main.hs
app/: Main.hs
data/declaration/: DataDef.agda  FunClause.agda  Import.agda  ModuleMacro.agda  Mutual1.agda  Open1.agda  Open2.agda  PatternSyn.agda  Record.agda  RecordDef.agda  TypeSig.agda
data/expression/: DoBlock1.agda  DoBlock2.agda  DoBlock3.agda  Let.agda
data/pattern/: AsP.agda  IdentP.agda
data/test/: As.agda  As2.agda  Binding.agda  Binding.agdai  Constructor.agda  Data.agda  Definition.agda  Do.agda  Lam.agda  Lambda.agda  Lambda2.agda  Lambda3.agda  Lambda3.agdai  Pattern.agda  Pattern2.agda  Pi.agda  Record.agda  RecordDef.agda  Recursive.agda  Syntax.agda  Syntax2.agda  TypeSig.agda  Underscore.agda  Variable.agda  Variable2.agdai  Variable3.agdai  Where.agda  With.agda  With2.agda  WithApp.agda
data/test/declaration/: Abstract.agda  Data.agda  DataDef.agda  DataSig.agda  Macro.agda  Module.agda  ModuleMacro.agda  Mutual.agda  Mutual2.agda  Open.agda  PatternSyn.agda  Postulate.agda  Private.agda  Record.agda  RecordDef.agda  Syntax.agda
data/test/example/: Test.agda
data/test/expression/: DoBlock.agda  DoBlock4.agda  ExtendedLam.agda
data/test/pattern/: OpAppP.agda
lib/Agda/: Unused.hs
lib/Agda/Unused/: Access.hs  Check.hs  Context.hs  Environment.hs  Error.hs  Item.hs  Name.hs  Print.hs  Range.hs  Root.hs  State.hs  Utils.hs
lib/Agda/Unused/Monad/: Reader.hs
lib/Agda/Unused/Types/: Context.hs  Range.hs
nix/: sources.json
src/Agda/: Unused.hs
src/Agda/Unused/: Check.hs  Config.hs  Options.hs  Parse.hs  Print.hs  Utils.hs
src/Agda/Unused/Monad/: Context.hs  Error.hs  Reader.hs  State.hs  Writer.hs
src/Agda/Unused/Monad/Context/: Item.hs
src/Agda/Unused/Types/: Access.hs  Context.hs  Name.hs  Range.hs  Root.hs
test/: Main.hs
