name:
  agda-unused
version:
  0.1.0.0
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10
data-files:
  data/**/*.agda

library
  hs-source-dirs:
    src
  exposed-modules:
    Agda.Unused
    Agda.Unused.Monad.Context
    Agda.Unused.Monad.Context.Item
    Agda.Unused.Monad.Error
    Agda.Unused.Monad.Reader
    Agda.Unused.Monad.State
    Agda.Unused.Monad.Writer
    Agda.Unused.Print
    Agda.Unused.Types.Access
    Agda.Unused.Types.Name
    Agda.Unused.Types.Range
    Agda.Unused.Types.Root
  other-modules:
    Agda.Unused.Utils
  build-depends:
    base,
    Agda,
    containers,
    directory,
    filepath,
    mtl,
    text
  default-language:
    Haskell2010
  default-extensions:
    FlexibleContexts,
    FlexibleInstances,
    GADTs,
    OverloadedStrings
  ghc-options:
    -Wall
    -Wno-orphans

executable agda-unused
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
    base,
    agda-unused,
    text
  default-language:
    Haskell2010
  ghc-options:
    -Wall

test-suite test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  build-depends:
    base,
    agda-unused,
    containers,
    hspec
  default-language:
    Haskell2010
  ghc-options:
    -Wall

