cabal-version: 3.0

name:
  agda-unused
version:
  0.1.0.0
license:
  MIT
license-file:
  LICENSE
extra-source-files:
  README.md
data-files:
  data/**/*.agda
build-type:
  Simple

library
  hs-source-dirs:
    src
  exposed-modules:
    Agda.Unused
    Agda.Unused.Config
    Agda.Unused.Monad.Error
    Agda.Unused.Monad.Reader
    Agda.Unused.Monad.State
    Agda.Unused.Print
    Agda.Unused.Types.Access
    Agda.Unused.Types.Context
    Agda.Unused.Types.Name
    Agda.Unused.Types.Range
    Agda.Unused.Types.Root
    Agda.Unused.Utils
  other-modules:
    Paths_agda_unused
  build-depends:
    base >= 4.13.0 && < 4.14,
    Agda >= 2.6.1 && < 2.7,
    containers >= 0.6.2 && < 0.7,
    directory >= 1.3.6 && < 1.4,
    filepath >= 1.4.2 && < 1.5,
    megaparsec >= 8.0.0 && < 8.1,
    mtl >= 2.2.2 && < 2.3,
    text >= 1.2.4 && < 1.3
  default-language:
    Haskell2010
  default-extensions:
    FlexibleContexts,
    FlexibleInstances,
    GADTs,
    OverloadedStrings
  ghc-options:
    -Wall
    -Wno-orphans

executable agda-unused
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
    agda-unused,
    base >= 4.13.0 && < 4.14,
    directory >= 1.3.6 && < 1.4,
    filepath >= 1.4.2 && < 1.5,
    mtl >= 2.2.2 && < 2.3,
    optparse-applicative >= 0.15.1 && < 0.16,
    text >= 1.2.4 && < 1.3
  default-language:
    Haskell2010
  default-extensions:
    FlexibleContexts,
    FlexibleInstances,
    GADTs,
    OverloadedStrings
  ghc-options:
    -Wall

test-suite test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  build-depends:
    agda-unused,
    base >= 4.13.0 && < 4.14,
    containers >= 0.6.2 && < 0.7,
    filepath >= 1.4.2 && < 1.5,
    hspec >= 2.7.1 && < 2.8
  default-language:
    Haskell2010
  ghc-options:
    -Wall

